Fix Code to enable Jar file to run